# CarEntertainmentSystem

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
Settings/: Folders.h  Settings.cpp  Settings.h
UI/: ConsoleUI.cpp  ConsoleUI.h
UI/Views/: CenterView.h  RightView.cpp  RightView.h  TopView.h
models/: Facade.cpp  Facade.h  MakeFolder.cpp  MakeFolder.h  MusicPlayer.cpp  MusicPlayer.h
models/data/: BluetoothMedia.h  DHT11.cpp  DHT11.h  Library.cpp  Library.h  Media.cpp  Media.h  MetaData.cpp  MetaData.h  Playlist.cpp  Playlist.h  SessionState.cpp  SessionState.h  Song.cpp  Song.h  TemperatureSensor.cpp  TemperatureSensor.h
models/data/connections/: BluetoothMedia.cpp  K_Line.cpp  K_Line.h  WIFI.cpp  WIFI.h
models/data/enums/: SourceType.h
models/data/fm_radio/: FMRadio.cpp  FMRadio.h  FMStation.cpp  FMStation.h
models/data/interfaces/: ISensor.cpp  ISensor.h
models/data/local_music/: Library.cpp  Library.h  Media.cpp  Media.h  MetaData.cpp  Song.cpp
models/data/playlist/: Playlist.cpp  Playlist.h
models/data/radio/: InternetRadio.cpp  InternetRadio.h  OnlineRadioLibrary.cpp  OnlineRadioLibrary.h  Station.cpp  Station.h
models/data/sensor/: DHT11.cpp  DHT11.h  FMRadio.cpp  FMRadio.h  GPIO.cpp  GPIO.h  GPS.cpp  GPS.h  II2C.h  PigpioI2C.cpp  PigpioI2C.h
ui/: ConsoleUI.h
ui/Views/: BottomView.cpp  BottomView.h  CenterView.cpp  CenterView.h  LeftView.cpp  LeftView.h  RightView.cpp  RightView.h  SourceView.cpp  SourceView.h  TopView.cpp  TopView.h
ui/Views/sidePanel/: FMPlayerView.cpp  FMPlayerView.h  MediaPlayerView.cpp  MediaPlayerView.h  MusicListView.cpp  MusicListView.h
